# SUNphi

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac
config/: Doxyfile.in  bootstrap  createAsm.sh  getGitInfo.sh  install_yaml_cpp.sh  publishDocumentation.sh
html/: annotated.html  annotated.js  annotated_dup.js  classes.html  dir_062dd3d6849305887aa6c2f56ce95494.html  dir_062dd3d6849305887aa6c2f56ce95494.js  dir_081a228b1cfa69ae178332a28d6a95f4.html  dir_081a228b1cfa69ae178332a28d6a95f4.js  dir_0ca87e0e155b63d3277a4a8052f2e1d0.html  dir_0ca87e0e155b63d3277a4a8052f2e1d0.js  dir_2b5be2f018c651c9a6a97d677fdb10f6.html  dir_2b5be2f018c651c9a6a97d677fdb10f6.js  dir_2cc15010050477bfdc996c66dbc57fa0.html  dir_2cc15010050477bfdc996c66dbc57fa0.js  dir_2ea30aa2956a8db99dd22aa5e597f384.html  dir_2ea30aa2956a8db99dd22aa5e597f384.js  dir_31153c7d8cc16ae64d9212a5c823a211.html  dir_31153c7d8cc16ae64d9212a5c823a211.js  dir_3a4d35156996fb70540e167b84a39bd1.html  dir_3a4d35156996fb70540e167b84a39bd1.js  dir_45b92bc6f59cb9a6067252841cd4b8ec.html  dir_45b92bc6f59cb9a6067252841cd4b8ec.js  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_4fef79e7177ba769987a8da36c892c5f.js  dir_51edb9926b3d839827add50fffb136ca.html  dir_51edb9926b3d839827add50fffb136ca.js  dir_7a9c7094c62de71bbec4b12c7c975b93.html  dir_7a9c7094c62de71bbec4b12c7c975b93.js  dir_8661c181a5e32e4691154f1e13423251.html  dir_8661c181a5e32e4691154f1e13423251.js  dir_8f2980731aba7ec7b9fcae5764f196e3.html  dir_8f2980731aba7ec7b9fcae5764f196e3.js  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9.js  dir_9ed55681294d7d9539b8ac10b0c682f5.html  dir_9ed55681294d7d9539b8ac10b0c682f5.js  dir_bc4a5d0e77575dc129d2b0c404afabc5.html  dir_bc4a5d0e77575dc129d2b0c404afabc5.js  dir_bf7086a74b01aa569c5a5ea4dca574e8.html  dir_bf7086a74b01aa569c5a5ea4dca574e8.js  (+167 more)
html/d0/d06/: structSUNphi_1_1HasMember__isAssignable_1_1Derived.html  structSUNphi_1_1HasMember__isAssignable_1_1Derived.js
html/d0/d11/: Sequence_8hpp.html  Sequence_8hpp.js  Sequence_8hpp_source.html
html/d0/d12/: classSUNphi_1_1SerializableDefaultValue-members.html
html/d0/d15/: Serializable_8hpp.html  Serializable_8hpp.js  Serializable_8hpp_source.html  classSUNphi_1_1Timer-members.html
html/d0/d16/: classSUNphi_1_1__FilterVariadicList.html
html/d0/d1d/: structSUNphi_1_1IntSeq_1_1__AppendFirstN_3_01false_00_01N_00_01IntSeq_3_01R_8_8_8_4_01_4.html  (+1 more)
html/d0/d23/: structSUNphi_1_1HasMember__end_1_1Check.html
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+111 more)
include/: Containers.hpp  Debug.hpp  Ints.hpp  Ios.hpp  Lattice.hpp  Math.hpp  MetaProgramming.hpp  Metaprogramming.hpp  Physics.hpp  Random.hpp  SUNphi.hpp  Serialize.hpp  SmET.hpp  System.hpp  TEx.hpp  Tens.hpp  Threads.hpp  Tuple.hpp  Utility.hpp
include/containers/: Map.hpp  Vector.hpp
include/debug/: BackTracing.hpp  Crash.hpp  Demangle.hpp  Dwarf.hpp  MinimalCrash.hpp  OptimizationDiagnostic.hpp  OptimizeDiagnostic.hpp  Warning.hpp
include/ints/: IntListGetEl.hpp  IntListOperations.hpp  IntListOrder.hpp  IntSeq.hpp  IntSeqCat.hpp  IntSeqGetEl.hpp  IntSeqInsert.hpp  IntSeqRemove.hpp  IntSeqSplit.hpp  IntSeqTranspose.hpp  Ranges.hpp
include/ios/: File.hpp  Files.hpp  Logger.hpp  MinimalLogger.hpp  Print.hpp  Serialize.hpp  TextColors.hpp  TextFormat.hpp
include/lattice/: Grid.hpp  Partitioner.hpp
include/math/: Arithmetic.hpp  Factorize.hpp  Partition.hpp  factorize.hpp
include/metaprogramming/: CRTP.hpp  EnableIf.hpp  ForEachTupleEl.hpp  GroupMacroStatements.hpp  Inline.hpp  IntSeq.hpp  IntSeqCat.hpp  LoopUnroll.hpp  SFINAE.hpp  StaticMemberWithInitializator.hpp  SwallowSemicolon.hpp  Tuple.hpp  TupleTypeCat.hpp  TupleWrap.hpp  TypeTraits.hpp  UniversalReferences.hpp
include/physics/: Compl.hpp  Dir.hpp  SUN.hpp  SUN.hpp~  SpaceTime.hpp  Spin.hpp
include/random/: Encrypter.hpp  MasterRandomGenerator.hpp  SFMT.hpp  Sitmo.hpp  Sitmo2.hpp  TrueRandom.hpp  TrueRandomGenerator.hpp
include/serialize/: Base.hpp  BinSize.hpp  Binarize.hpp  DeSerializer.hpp  Default.hpp  Map.hpp  Members.hpp  Scalar.hpp  Sequence.hpp  Serializable.hpp  SerializableBase.hpp  SerializableMembers.hpp  SerializableScalar.hpp  Serializer.hpp
include/smet/: Add.hpp  Adj.hpp  Assign.hpp  BaseSmET.hpp  BinarySmET.hpp  Bind.hpp  Conj.hpp  MulAdd.hpp  NnarySmET.hpp  Reference.hpp  RelBind.hpp  RelBindTwoComps.hpp  ScalarWrap.hpp  ScalarWrapper.hpp  Transpose.hpp  UnaryMinus.hpp  UnaryPlus.hpp  UnaryPlusMinus.hpp  UnarySmET.hpp  Wrap.hpp
include/system/: Debug.hpp  Memory.hpp  Mpi.hpp  MpiImpl.hpp  SIMD.hpp  Threads.hpp  Timer.hpp  Vector.hpp
include/tens/: Indexer.hpp  TensClass.hpp  TensComp.hpp  TensKind.hpp  TensStor.hpp  TwinsComp.hpp
include/tex/: Adj.hpp  Adjoint.hpp  Assign.hpp  BaseTEx.hpp  BinaryTEx.hpp  Bind.hpp  Conj.hpp  Reference.hpp  Transpose.hpp  UnaryPlusMinus.hpp  UnaryTEx.hpp  Wrap.hpp
include/threads/: Barrier.hpp  FakePool.hpp  Mutex.hpp  Pool.hpp  Thread.hpp  ThreadPool.hpp  TrueThreads.hpp~
include/tuple/: Filter.hpp  TupleClass.hpp  TupleElements.hpp  TupleOrder.hpp  TupleTypeCat.hpp  TupleWrap.hpp
include/utility/: Aliver.hpp  Bits.hpp  Combinatorial.hpp  Flags.hpp  Inline.hpp  Macros.hpp  Position.hpp  ScopeDoer.hpp  SingleInstance.hpp  String.hpp  Unused.hpp  ValWithExtreme.hpp
lib/: Aliver.cpp  Makefile.am  SUNphi.cpp
lib/debug/: BackTracing.cpp
lib/ios/: MinimalLogger.cpp
lib/system/: Mpi.cpp  Threads.cpp
lib/utility/: Aliver.cpp
m4/: ax_arg_enable.m4  ax_arg_with.m4  ax_get_configure_pars.m4  ax_search_headers.m4  ax_search_libs.m4  ax_simple_enable.m4  ax_subpackage.m4  m4_ax_check_x86_features.m4
(+1272 files in other folders)
